[gd_scene load_steps=6 format=2]

[ext_resource path="res://ActionsContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/icons/build.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/icons/upgrade.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/icons/demolish.png" type="Texture" id=4]
[ext_resource path="res://ui/TileInfo.gd" type="Script" id=5]

[node name="GUI" type="CanvasLayer"]
layer = 0

[node name="Left" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 204.0
margin_bottom = 50.0
mouse_filter = 1

[node name="ActionsContainer" type="VBoxContainer" parent="Left"]
margin_right = 76.0
margin_bottom = 218.0
size_flags_horizontal = 0
script = ExtResource( 1 )

[node name="Build" type="Button" parent="Left/ActionsContainer"]
margin_right = 76.0
margin_bottom = 70.0
toggle_mode = true
icon = ExtResource( 2 )

[node name="Upgrade" type="Button" parent="Left/ActionsContainer"]
margin_top = 74.0
margin_right = 76.0
margin_bottom = 144.0
icon = ExtResource( 3 )

[node name="Demolish" type="Button" parent="Left/ActionsContainer"]
margin_top = 148.0
margin_right = 76.0
margin_bottom = 218.0
icon = ExtResource( 4 )

[node name="BottomRight" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -209.0
margin_top = 240.0
margin_bottom = 360.0

[node name="TileInfoContainer" type="Control" parent="BottomRight"]
margin_right = 209.0
margin_bottom = 120.0
mouse_filter = 1

[node name="TileInfo" type="RichTextLabel" parent="BottomRight/TileInfoContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -120.0
margin_right = -9.0
margin_bottom = -20.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "test"
scroll_active = false
script = ExtResource( 5 )
[connection signal="pressed" from="Left/ActionsContainer/Build" to="Left/ActionsContainer" method="_on_Build_pressed"]
[connection signal="pressed" from="Left/ActionsContainer/Upgrade" to="Left/ActionsContainer" method="_on_Upgrade_pressed"]
[connection signal="pressed" from="Left/ActionsContainer/Demolish" to="Left/ActionsContainer" method="_on_Demolish_pressed"]
